--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ section {
 .menu ul {
     display: flex;
     list-style: none;
+    color: #ffffff;
 }
 
 .menu ul li:first-child:before {
@@ -52,54 +53,80 @@ section {
     color: #494e62;
     content: "●";
     padding-right: 10px;
-
 }
 
 .menu li {
     margin-left: 11px;
-    color:white;
+    cursor: pointer;
 }
 
-.menu li:first-child {
+.menu li:hover {
     color: #f06c64;
 }
 
-.menu a {
-    text-decoration: none;
-    color: inherit;
-}
-
-.menu li a:hover {
-    color: #f06c64;
-}
-
-.menu li a:active {
+.menu li:active {
     color: #993832;
+}
+
+.menu_active {
+    color: #f06c64;
 }
 
 /* SLIDER */
 
 .slider {
     position: relative;
-}
-
-.slider {
     height: 594px;
-    background-color: #f06c64;
+    width: 1020px;
     border-bottom: 6px solid #ea676b;
+    overflow: hidden;
 }
 
-.slider img:first-child {
+.slide-single {
     position: absolute;
-    bottom: 31px;
-    left: 111px;
+    transition: all ease 1s;
+    left: 0;
+    top: 0;
 }
 
-.slider img:nth-child(2) {
+.screen-1 {
     position: absolute;
-    top: 69px;
-    left: 360px;
+    top: 118px;
+    left: 125px;
+    width: 189px;
+    height: 334px;
+    background-color: black;
+    z-index: 1;
+    transition: opacity 1s;
+    opacity: 0;
+}
 
+.screen-2 {
+    position: absolute;
+    top: 191px;
+    left: 485px;
+    width: 333px;
+    height: 188px;
+    background-color: black;
+    z-index: 1;
+    transition: opacity 1s;
+    opacity: 0;
+}
+
+.screen-3 {
+    position: absolute;
+    top: 112px;
+    left: 398px;
+    width: 200px;
+    height: 354px;
+    background-color: black;
+    z-index: 1;
+    transition: opacity 1s;
+    opacity: 0;
+}
+
+.touch_screen {
+    opacity: 1;
 }
 
 @keyframes next {
@@ -131,6 +158,7 @@ section {
     top: 266px;
     cursor: pointer;
     padding: 15px;
+    z-index: 1;
 }
 
 .slider .prev:hover {
@@ -147,6 +175,7 @@ section {
     top: 266px;
     cursor: pointer;
     padding: 15px;
+    z-index: 1;
 }
 
 .slider .next:hover {
@@ -328,23 +357,17 @@ section {
     border-radius: 5px;
     padding: 0px 7px 2px 6px;
     margin-right: 10px;
+    cursor: pointer;
 }
 
-.tags a {
-    color: inherit;
-    text-decoration: none;
-    font-size: 12px;
-}
 
-.tags .active {
+.tag_active {
     color: #ffffff;
-    border-color: #ffffff;
 }
 
 .images {
     display: flex;
     flex-wrap: wrap;
-    overflow: hidden;
     height: 610px;
 }
 
@@ -356,62 +379,66 @@ section {
     position: relative;
 }
 
-.images div:first-child img{
+.img-touch {
+    outline: 5px solid #F06C64;
+}
+
+.img-1 {
     position: absolute;
     transform: translate(-8px, -11px);
 }
 
-.images div:nth-child(2) img {
+.img-2{
     position: absolute;
     transform: translate(-82px, -43px);
 }
 
-.images div:nth-child(3) img {
+.img-3 {
     position: absolute;
     transform: translate(-11px, -1px);
 }
 
-.images div:nth-child(4) img {
+.img-4 {
     position: absolute;
     transform: translate(-24px, -2px);
 }
 
-.images div:nth-child(5) img {
+.img-5 {
     position: absolute;
     transform: translate(-10px, -16px);
 }
 
-.images div:nth-child(6) img {
+.img-6 {
     position: absolute;
     transform: translate(-16px, -4px);
 }
 
-.images div:nth-child(7) img {
+.img-7 {
     position: absolute;
     transform: translate(-31px, -39px);
 }
 
-.images div:nth-child(8) img {
+.img-8 {
     position: absolute;
     transform: translate(-24px, -32px);
 }
 
-.images div:nth-child(9) img {
+.img-9 {
     position: absolute;
     transform: translate(-16px, -2px);
 }
 
-.images div:nth-child(10) img {
+.img-10 {
     position: absolute;
     transform: translate(-141px, -113px);
 }
 
-.images div:nth-child(11) img {
+.img-11 {
     position: absolute;
     transform: translate(-144px, -175px);
 }
 
-.images div:nth-child(12) img {
+.img-12 {
     position: absolute;
     transform: translate(-36px, -60px);
 }
@@ -483,6 +510,7 @@ section {
 
 .quote-wrapper {
     margin: 54px 33px 0 34px;
+    position: relative;
 }
 
 .quote {
@@ -505,6 +533,39 @@ section {
     line-height: 31px;
     word-spacing: 1px;
     margin-bottom: 43px;
+}
+
+.message {
+    position: absolute;
+    box-sizing: content-box;
+    top: 40%;
+    left: 20%;
+    background-color: #f0d8d9;
+    border: 1px solid grey;
+    border-radius: 10px;
+    padding: 15px;
+    transition: all ease 1s;
+    color: black;
+    z-index: 10;
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg);
+        background-color: #494e62;}
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+.shake {
+    animation: shake 1s;
 }
 
 .flex-wrapper {
@@ -657,3 +718,11 @@ footer .social img {
     margin-right: 3px;
 }
 
+.scroll_top {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 30px;
+    height: 100%;
+    background-color: black;
+}
