--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ section {
     padding-top: 29px;
     padding-left: 39px;
     cursor: default;
-    transition: all ease 1s;
+    transition: all ease 500ms;
 }
 
 .logo span {
@@ -837,7 +837,7 @@ footer .social img {
     }
 
     .menu {
-        position: absolute;
+        position: fixed;
         width: 278px;
         height: 100%;
         top: 0;
@@ -854,7 +854,7 @@ footer .social img {
 
     .menu ul {
         position: relative;
-        top: 150px;
+        top: 115px;
         display: block;
         list-style: none;
         color: #ffffff;
